# minitorch-module-0-uhve

./: README.md  pyproject.toml  requirements.txt
minitorch/: __init__.py  datasets.py  module.py  operators.py
tests/: strategies.py  test_operators.py
