[build-system]
  build-backend = "hatchling.build"
  requires      = [ "hatchling" ]

[project]
  name    = "minitorch"
  version = "0.5"

[tool.pyright]
  exclude = [
    "**/.*",
    "**/assignments",
    "**/docs",
    "**/docs/module1/**",
    "**/mt_diagrams",
    "**/project",
    "*chainrule.py*",
  ]
  include = [ "**/minitorch" ]
  reportIncompatibleMethodOverride = "none"
  reportMissingParameterType = "error"
  reportMissingTypeArgument = "none"
  reportMissingTypeStubs = "none"
  reportPrivateUsage = "none"
  reportUnknownArgumentType = "none"
  reportUnknownLambdaType = "none"
  reportUnknownMemberType = "none"
  reportUnknownParameterType = "none"
  reportUnknownVariableType = "none"
  reportUnusedExpression = "none"
  venv = ".venv"
  venvPath = "."


[tool.pytest.ini_options]
  markers = [
    "task0_0",
    "task0_1",
    "task0_2",
    "task0_3",
    "task0_4",
    "task1_0",
    "task1_1",
    "task1_2",
    "task1_3",
    "task1_4",
    "task2_0",
    "task2_1",
    "task2_2",
    "task2_3",
    "task2_4",
    "task3_0",
    "task3_1",
    "task3_2",
    "task3_3",
    "task3_4",
    "task4_0",
    "task4_1",
    "task4_2",
    "task4_3",
    "task4_4",
  ]
[tool.ruff]

  exclude = [
    "**/docs/**/*",
    "**/docs/slides/*",
    "**/minitorch/testing.py",
    "**/mt_diagrams/*",
    "**/project/**/*",
    ".git",
    "__pycache__",
    "dist",
    "old,build",
  ]

  [tool.ruff.lint]
    fixable = [
      "A",
      "ANN",
      "ARG",
      "B",
      "BLE",
      "C",
      "COM",
      "D",
      "DJ",
      "DTZ",
      "E",
      "EM",
      "ERA",
      "EXE",
      "F",
      "FBT",
      "G",
      "I",
      "ICN",
      "INP",
      "ISC",
      "N",
      "NPY",
      "PD",
      "PGH",
      "PIE",
      "PL",
      "PT",
      "PTH",
      "PYI",
      "Q",
      "RET",
      "RSE",
      "RUF",
      "S",
      "SIM",
      "SLF",
      "T",
      "TCH",
      "TID",
      "TRY",
      "UP",
      "W",
      "YTT",
    ]
    ignore = [
      "ANN101",
      "ANN102",
      "ANN204",
      "ANN401",
      "D100",
      "D101",
      "D105",
      "D107",
      "D205",
      "D213",
      "D400",
      "D401",
      "D402",
      "D415",
      "E203",
      "E266",
      "E501",
      "E741",
      "N801",
      "N802",
      "N803",
      "N806",
      "D203",
    ]
    select = [ "ANN", "D", "E", "F", "N" ]
    unfixable = [  ]

    [tool.ruff.lint.extend-per-file-ignores]
      "tests/**/*.py" = [ "D" ]
